--- a/client/.gitignore
+++ b/client/.gitignore
@@ -3,16 +3,16 @@
 # dependencies
 /node_modules
 
-# misc
-npm-debug.log
-
-# example
-/quick-start
-
-# tests
-/test
+# testing
 /coverage
-/.nyc_output
 
-# dist
-/dist
+# production
+/build
+
+# misc
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
