--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "build/dist",
+    "experimentalDecorators": true,
     "module": "commonjs",
     "target": "es5",
     "lib": ["es6", "dom"],
