--- a/client/package.json
+++ b/client/package.json
@@ -7,28 +7,32 @@
     "@types/node": "^7.0.21",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
+    "auth0-js": "8.6.1",
+    "jwt-decode": "2.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.3",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "reselect":"^3.0.1"
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
+    "@types/auth0-js": "8.3.0",
     "@types/history": "^3.2.0",
+    "@types/jwt-decode": "1.4.28",
     "@types/react-redux": "^4.4.38",
     "@types/react-router": "^3.0.9",
     "@types/react-router-redux": "^4.0.43",
     "@types/redux-devtools": "3.0.37",
-    "@types/redux-devtools-log-monitor":"1.0.30",
-    "@types/redux-devtools-dock-monitor":"1.1.30",
+    "@types/redux-devtools-log-monitor": "1.0.30",
+    "@types/redux-devtools-dock-monitor": "1.1.30",
     "@types/redux-logger": "^3.0.0",
-    "@types/redux-immutable-state-invariant":"2.0.0",
+    "@types/redux-immutable-state-invariant": "2.0.0",
     "@types/reselect": "2.2.0",
     "react-scripts-ts": "1.4.0",
     "redux-immutable-state-invariant": "2.0.0",
-    "redux-devtools":"3.4.0",
+    "redux-devtools": "3.4.0",
     "redux-devtools-log-monitor": "1.3.0",
     "redux-devtools-dock-monitor": "1.1.2",
     "redux-logger": "^3.0.0"
