--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/jest": "^19.2.3",
-    "@types/node": "^7.0.21",
+    "@types/node": "^7.0.22",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "auth0-js": "8.6.1",
+    "isomorphic-fetch": "2.2.1",
     "jwt-decode": "2.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -15,11 +16,13 @@
     "react-router": "^3.0.3",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-thunk": "2.2.0",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
     "@types/auth0-js": "8.3.0",
     "@types/history": "^3.2.0",
+    "@types/isomorphic-fetch": "0.0.34",
     "@types/jwt-decode": "1.4.28",
     "@types/react-redux": "^4.4.38",
     "@types/react-router": "^3.0.9",
@@ -30,6 +33,7 @@
     "@types/redux-logger": "^3.0.0",
     "@types/redux-immutable-state-invariant": "2.0.0",
     "@types/reselect": "2.2.0",
+    "@types/redux-thunk": "2.1.0",
     "react-scripts-ts": "1.4.0",
     "redux-immutable-state-invariant": "2.0.0",
     "redux-devtools": "3.4.0",
